@@ -1,3 +1,9 @@
+TAG: qcreports_db-3-5-3-17
+DATE: 07/13/2007
+STAFF: sc
+CHANGES: 
+1) TR8359 - add to GXD_ProbeAntibody.sql
+
 TAG: qcreports_db-3-5-3-16
 DATE: 07/09/2007
 STAFF: sc
